--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,17 @@
   "extends": "airbnb-base",
   "plugins": [
     "import"
-  ]
+  ],
+  "rules": {
+    "arrow-parens": 0,
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": [
+          "_tasks"
+        ],
+        "allowAfterThis": false
+      }
+    ]
+  }
 }
