--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint lib test",
     "babel": "babel lib -d dest",
     "prepublish": "npm run babel",
+    "prepush": "npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "resetFixtures": "mv test/fixtures/repo-with-tags/.git test/fixtures/repo-with-tags/git && mv test/fixtures/repo-without-tags/.git test/fixtures/repo-without-tags/git && mv test/fixtures/repo-no-commits/.git test/fixtures/repo-no-commits/git"
   },
