--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
   "dependencies": {
     "execa": "^0.6.3",
     "fs-extra": "^3.0.1",
+    "get-git-remotes": "^1.0.1",
     "git-commit-info": "^1.0.0",
+    "git-commit-range": "^1.0.1",
     "has-yarn": "^1.0.0",
     "inquirer": "^3.0.6",
     "is-git-added": "^1.0.2",
