--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nyc": "^10.1.2"
   },
   "dependencies": {
+    "chalk": "^2.0.1",
     "execa": "^0.6.3",
     "fs-extra": "^3.0.1",
     "get-git-remotes": "^1.0.1",
@@ -78,7 +79,7 @@
     "listr": "^0.12.0",
     "moment": "^2.18.1",
     "semver": "^5.3.0",
-    "tagged-git-commit": "^1.0.0",
+    "tagged-git-commits": "^1.0.0",
     "update-notifier": "^2.1.0",
     "yargs": "^8.0.1"
   }
