--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   "homepage": "https://github.com/aichbauer/node-semantic-git-release-cli#readme",
   "devDependencies": {
     "ava": "^0.18.2",
-    "babel-cli": "^6.24.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.2.1",
     "coveralls": "^2.12.0",
@@ -67,6 +66,7 @@
   },
   "dependencies": {
     "chalk": "^2.0.1",
+    "count-git-tags": "^1.0.0",
     "execa": "^0.6.3",
     "fs-extra": "^3.0.1",
     "get-git-remotes": "^1.0.1",
@@ -78,6 +78,7 @@
     "is-git-repository": "^1.1.1",
     "listr": "^0.12.0",
     "moment": "^2.18.1",
+    "prepend-file": "^1.3.1",
     "semver": "^5.3.0",
     "tagged-git-commits": "^1.0.0",
     "update-notifier": "^2.1.0",
