--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "exclude": [
       "test",
       "dest",
-      "lib/sub-tasks",
-      "lib/tasks.js",
+      "lib/tasks",
       "lib/helpers/cleanNodeModules.js"
     ]
   },
