--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: node_js
 sudo: true
 dist: trusty
 node_js:
-  - "4"
-  - "6"
+  - "10"
+  - "12"
 install:
-  - yarn
+  - npm i
 script: npm test
 notifications:
   email:
