--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "ava": "^2.3.0",
+    "coveralls": "^3.0.6",
     "cross-env": "^5.2.0",
     "husky": "^0.13.4",
     "lint-staged": "^9.2.3",
